--- a/Interactivequiz.css
+++ b/Interactivequiz.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0%;
 }
@@ -34,12 +37,18 @@
     font-weight: 500;
     font-size: 15px;
 }
+.nev-btn{
+    display: flex;
+    width: 100%;
+    justify-content: flex-start ;
+    color: red;
+}
 .btn1:hover{
     background-color: white;
     color: green;
 }
 .Inner-container{
-    display: flex;
+    display: none;
     flex-direction: column;
     width: 100%;
     height: 100vh;
@@ -57,6 +66,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.Qbox{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 80%;
 }
 .S-btn{
     width: 70%;
