--- a/Interactivequiz.css
+++ b/Interactivequiz.css
@@ -36,6 +36,7 @@ html{
     font-family: 'Times New Roman', Times, serif;
     font-weight: 500;
     font-size: 15px;
+    cursor: pointer;
 }
 .nev-btn{
     display: flex;
@@ -71,11 +72,11 @@ html{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 80%;
+    height: 90%;
 }
 .S-btn{
     width: 70%;
-    height: 10%;
+    height: 8%;
     background-color: blue;
     color: white;
     font-family: 'Times New Roman', Times, serif;
@@ -90,7 +91,7 @@ html{
 }
 .R-btn{
     width: 40%;
-    height: 10%;
+    height: 5%;
     background-color: red;
     color: white;
     font-family: 'Times New Roman', Times, serif;
