--- a/Interactivequiz.css
+++ b/Interactivequiz.css
@@ -110,7 +110,26 @@ html{
 }
 label , p{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 25px;
-
+    font-size: 25px
 }
-
+.scoringBox{
+    display: none;
+    width: 100%;
+    height: 100vh;
+    background-color: lightblue;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+.corect{
+    width: 35% ;
+    height: 65%;
+    background-color: green;
+    border-radius: 10px;
+}
+.wrong{
+    width: 35% ;
+    height: 65%;
+    background-color: red;
+    border-radius: 10px;
+}
