--- a/Interactivequiz.css
+++ b/Interactivequiz.css
@@ -114,22 +114,85 @@ label , p{
 }
 .scoringBox{
     display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100vh;
     background-color: lightblue;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+}
+.scoringBox p {
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.Boxes{
+    width: 100%;
+    height: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 .corect{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 35% ;
     height: 65%;
     background-color: green;
     border-radius: 10px;
 }
 .wrong{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 35% ;
     height: 65%;
     background-color: red;
     border-radius: 10px;
+}
+.corect p , .wrong p{
+    font-size: 35px;
+    font-weight: 500;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+}
+.btn-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 15%;
+    gap: 30px;
+}
+.btn-section1 ,.btn-section2{
+    width: 170px;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    border-radius: 10px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.btn-section1{
+    background-color: blue;
+    color: white;
+}
+.btn-section1:hover{
+    background-color: white;
+    color: blue;
+}
+.btn-section2{
+    background-color: red;
+    color: white;
+}
+.btn-section2:hover{
+    background-color: white;
+    color: red;
 }
