--- a/Interactivequiz.css
+++ b/Interactivequiz.css
@@ -92,20 +92,30 @@ html{
     background-color: white;
     color: blue;
 }
-.N-Box{
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10%;
-    width: 95%;
+    height: 3%;
+    width: 90%;
     border-radius: 5%;
     gap: 10px;
 }
-.p-box{
-    height: 20%;
-    width: 85%;
-    background-color: greenyellow;
+.progress{
+    height: 65%;
+    width: 65%;
     border-radius: 10px;
+    background-color: gray;
+}
+#P-bar{
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    background-color: green;
+}
+#p-Text{
+    font-size: 15px;
+    font-family: 'Times New Roman', Times, serif;
 }
 .R-btn{
     width: 40%;
@@ -211,8 +221,18 @@ label , p{
     background-color: white;
     color: red;
 }
-.Rp-Box{
+.Resultbar{
     width: 50%;
     height: 40px;
+    background-color: gray;
+    border-radius: 15px;
+    display: flex;
+}
+#Abar{
+    height: 100%;
+    background-color: green;
+}
+#Wbar{
+    height: 100%;
     background-color: red;
 }
