--- a/Interactivequiz.css
+++ b/Interactivequiz.css
@@ -231,8 +231,20 @@ label , p{
 #Abar{
     height: 100%;
     background-color: green;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #Wbar{
     height: 100%;
     background-color: red;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+        font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
